<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Team (Football)</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_bar_title">My Team</string>
    <string name="personalize_team">Personalize your team</string>
    <string name="team_name_preference">Team Name</string>
    <string name="team_namesummary_preference">Select your Team\'s name</string>
    <string name="dt_name_title">DT Name</string>
    <string name="dt_name_summary">Select your technical director\'s name</string>
    <string name="title_activity_player_entry">Player Entry</string>
    <string name="text_view_title">Entry new Player</string>
    <string name="radio_button_goalkeeper">Goalkeeper</string>
    <string name="radio_button_defender">Defender</string>
    <string name="radio_button_midfielder">Midfielder</string>
    <string name="radio_button_forward">Forward</string>
    <string name="button_next">Next</string>
    <string name="text_name_hint">Enter player\'s name</string>
    <string name="default_team_name">My Team</string>
    <string name="default_dt_name">My DT</string>
    <string name="team_completed">Team already completed Successfully, press Next</string>

</resources>
